[package]
name = "toy-os"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.10"
bitflags = "2.6.0"
xmas-elf = "0.9.1"
log = "0.4"
volatile = "0.3"